Clean up existing tuners and add LateralTranslationalAutoTuner